# zero

./: .gitignore  LICENSE  README.md  main.py  optimized_react.json  pyproject.toml
agent/: __init__.py  agent_tool_manager.py  internal_gen.py  programming.py  root_agent.py  tool_agent.py
conf/: __init__.py  example.ini
frontend/: API_SETUP.md  MODE_SYSTEM_GUIDE.md  backend_cors_example.py  package-lock.json  package.json  package_json_proxy_example.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Chat.js  MarkdownRenderer.js
frontend/src/config/: api.js
frontend/src/contexts/: ModeContext.js
mcp_client/: __init__.py  dspy_mcp.py
memory/: __init__.py  conversation.py  debug.py  docker-compose.yaml  memcache.py
utils/: __init__.py  chatsocket.py
