[project]
name = "jean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloredlog>=0.2.5",
    "coloredlogs>=15.0.1",
    "dspy>=2.6.23",
    "fastapi[standard]>=0.115.12",
    "mcp>=1.9.0",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "weaviate-client>=4.15.0",
]
